# bibby

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  dev.sh  e2e.sh  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.githooks/: pre-commit
.sqlx/: query-02a0b2224da050f29488947b9da81c94b7a8d9ce29b36e0e196a731ad2e7478c.json  query-397ef53d4b50975c82f128b4d4d314e2e1f62ac991acd46cc7907a160095eab3.json  query-44ec0166fa34595db51b7241194b3de08de806d279da3ef8ba783163a535fa2b.json  query-5580a7170efc300e934b85603d203d94a07308b3368da2ec7fb386960d01ae50.json  query-5d20c159011d43cf8f8ed6c95953bfac6a18a922e2bd24d3444ea152cfcb9ef2.json  query-63303c0a206815e4a1caccc4b26de3c4849d7116d97cc87cf4dc2d9690a7d7b1.json  query-69f78e40c2f11841ecfdfc8ef5792dbd625ccbc8363ffac9c664853dc8ade8c6.json  query-83f774f009f65c4221d9334ffa78607f4cd6fb71ec6186f7376ae37ec4be01db.json  query-a56cad39924dc3561ed3921f9624ba2ed81910c913c3cd757b985c43b9377595.json  query-a6ace1d23384956826c845a4c148d0313b663dbe89c7991f3e70264333016e63.json  query-a9ccc227b428f05bbd47046ecacdc09b43c4c85bd7a140400eb8da24d07c6bbb.json  query-d0751ddf2062d2146451c087ffbdfb1e2a853eec6be47db6e38c3149b43c4a8e.json  query-fa8880bedc4ad04859ef7c3ad57330d200f81056e1b34d674f706341d8efbdc3.json
e2e/: example.spec.ts
migrations/: 20260529210000_create_updated_at_function.sql  20260529210001_create_countries_table.sql  20260529210001_create_users_table.sql  20260529210002_create_countries_table.sql  20260529210002_create_regions_table.sql  20260529210003_create_regions_table.sql  20260529210003_create_users_table.sql  20260529210004_create_user_details_view.sql  20260529210005_add_region_to_user_details.sql  20260529210005_create_announcements_table.sql  20260529210006_create_announcements_table.sql  20260529210006_create_blogs_table.sql  20260529210007_create_blogs_table.sql  (+1 more)
src/: error.rs  (+3 more)
(+75 files in other folders)
