[package]
name = "bibby"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
axum = { version = "0.8.8", features = ["http2", "macros"] }
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "process", "signal"] }
tower-http = { version = "0.6.8", features = ["compression-full", "fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
