[package]
name = "bibby"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
axum = { version = "0.8.8", features = ["http2", "macros"] }
axum-extra = { version = "0.12.5", features = ["cookie", "form", "query"] }
chrono = { version = "0.4.44", features = ["serde"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
num-format = "0.4.4"
geodude = "0.1.0"
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "http2"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "tls-rustls-ring", "postgres", "macros", "migrate"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "process", "signal"] }
tower-http = { version = "0.6.8", features = ["compression-full", "fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.22.0", features = ["v4"] }
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
ammonia = "4.1.2"
shima = { version = "0.6.5", features = ["all"] }
